Fix image file extension from .JPG to .jpg

--- a/Paginas/comunidad.html
+++ b/Paginas/comunidad.html
@@ -105,7 +105,7 @@
                     <img src="../Imagenes/img3.JPG">
                 </div>
                 <div class="gallery-item">
-                    <img src="../Imagenes/img4.JPG">
+                    <img src="../Imagenes/img4.jpg">
                 </div>
                 <div class="gallery-item">
                     <img src="../Imagenes/img5.JPG">
